# demographic-controllable-faces

./: .env.example  .gitignore  .metric_constraints.txt  LICENSE  Makefile  PROJECT_PLAN.md  README.md  SETUP.md  WRITEUP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: benchmark.yaml  checkpoint_selection.yaml  demo_lora.yaml  dreambooth_lora.yaml
patches/: photomaker-pipeline-resume-download.patch
results/: checkpoint_selection.csv  per_race_breakdown.json  race_ceiling.csv
results/benchmark/: manifest.jsonl  mivolo_ages.json  scores.jsonl  scores_extra.jsonl
results/gallery/: README.md
results/samples/: README.md
results/tables/: distribution.csv  diversity.csv  headline.csv  race_by_class.csv
scripts/: 00_fetch_weights.py  01_download_ffhq.py  02_split_ffhq.py  03_build_identity_gallery.py  04_caption_ffhq.py  05_train_demo_lora.py  06_eval_checkpoints.py  07_train_dreambooth_lora.py  08_run_benchmark.py  08b_gen_hyperlora_loras.py  09_compute_metrics.py  09b_mivolo_age.py  09c_diversity.py  diagnose_race_control.py  make_full_gallery.py  make_rescue_figure.py  make_sample_gallery.py  setup_external.sh  setup_mivolo_venv.sh
src/dcfaces/: __init__.py  demographics.py  faces.py  paths.py
src/dcfaces/benchmark/: __init__.py  methods.py  prompts.py
src/dcfaces/captioning/: blip2.py
src/dcfaces/metrics/: adaface.py  aesthetic.py  clip_score.py  distribution.py  identity.py  perceptual.py
src/dcfaces/training/: dataset.py  eval.py  sdxl_lora.py
tests/: test_configs.py  test_paths.py  test_prompts.py
