[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcfaces"
version = "0.1.0"
description = "Demographic-controllable identity-preserving face generation: SDXL + PuLID + demographic LoRA trained on FFHQ."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ossama Azab", email = "OssamaAzab@users.noreply.github.com"},
]
keywords = ["diffusion", "sdxl", "face-generation", "pulid", "lora", "fairface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/USERNAME/demographic-controllable-faces"
Issues = "https://github.com/USERNAME/demographic-controllable-faces/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dcfaces = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]  # handled by formatter
